2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 616949 - Message bubbles prevents the background color
	  of selected text to change'.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 616001 - Inline errors don't completely vanish after
	  build'.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  613825 - Auto-complete on highlighted text overwrites
	  following characters'.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed
	  breakpoint text markers.

2010-06-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed 'Bug
	  613114 - NRE in editor means error marker never goes away'.

2010-06-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Use a
	  system font for bubbles.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  611202 - Move line up/down command fails in aspx files'.


2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: check if
	  search&replace widget is open.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed 'Bug
	  610204 - Find-as-you-type-bar with Chrome style broke a good
	  use case of the find-bar with Firefox style'.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 610099 - Typing in lines with bubbles very slow'.


2010-05-28  Mike Krüger  <mkrueger@novell.com>
