@@ -1,3 +1,9 @@
+2010-07-02  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Disabled the
+	  navigation bar subsystem - it got replaced by the pathed
+	  document subsystem.
+
 2010-06-24  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.SourceEditor/SourceEditorView.cs:
